objects/PromotionFund__mdt.object
<CustomObject>
    <fields>
        <fullName>CategoryAmount__c</fullName>
        <label>Category Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CategoryPecentage__c</fullName>
        <label>Category Pecentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaxPromotionFund__c</fullName>
        <label>Max Promotion Fund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Min Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MinimumPromotionFund__c</fullName>
        <label>Minimum Promotion Fund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentCategory__c</fullName>
        <label>Rent Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentRangeMax__c</fullName>
        <label>Rent Range Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentRangeMin__c</fullName>
        <label>Rent Range Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                    <default>true</default>
                    <label>Gross</label>
                </value>
                <value>
                    <fullName>Semi Gross</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
                <value>
                    <fullName>Albany</fullName>
                </value>
                <value>
                    <fullName>Manukau</fullName>
                </value>
                <value>
                    <fullName>St. Lukes</fullName>
                </value>
                <value>
                    <fullName>Riccarton</fullName>
                </value>
                <value>
                    <fullName>Newmarket</fullName>
                </value>
                <value>
                    <fullName>St Lukes</fullName>
                </value>
                <value>
                    <fullName>New market</fullName>
                    <isActive>false</isActive>
                    <label>New market</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion Fund</label>
    <pluralLabel>Promotion Funds</pluralLabel>
</CustomObject>